--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ name                     : "Alex Braithwaite"
 description              : "Just some weightlifting notes."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : 'acbraith/weightlifting' # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : 'acbraith/chinfl' # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
