--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Weightlifting"
+title                    : "CHINFL"
 title_separator          : "-"
-name                     : "Alex Braithwaite"
+name                     : "Alex"
 description              : "Just some weightlifting notes."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
